# coffee

./: .env  .gitignore  Cargo.toml  README.MD  container-compose.yml
crates/coffee-back/: Cargo.toml  Dockerfile
crates/coffee-back/src/: main.rs
crates/coffee-front/: Cargo.toml  README.md  Trunk.toml  build.rs  index.html  td.md
crates/coffee-front/src/: api.rs  app.rs  delay.rs  env.rs  main.rs
crates/coffee-front/src/routes/: counter.rs  home.rs  mod.rs  order.rs
crates/shared/src/: lib.rs
