[package]
name = "coffee-back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
tower-http = { version = "0.5.2", features = ["cors"] }
shared = {path = "../shared"}
rand = { version = "0.9.0-alpha.1", features = [] }