[package]
name = "cofee-front"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = {  git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }

log = "0.4.21"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
wasm-logger = "0.2.0"
serde_json = "1.0.117"
reqwasm = "0.5.0"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.203", features = ["derive"] }
wasm-bindgen-futures = "0.4.42"
#shared = {path = "../shared"}

parking_lot = { version = "0.11.1", features = ["wasm-bindgen"]}
shared = { git = "https://github.com/toastxc/coffee-shared/", branch = "main" }
#tokio = { version = "1.38.0", features = ["time"] }

wasm-timer = "0.2.5"
[build-dependencies]
dotenv = "0.15.0"